--- a/css/custom.css
+++ b/css/custom.css
@@ -66,7 +66,7 @@ header ul{
 }
 
 header li{
-	display: inline;
+  display: inline-block ;
 }
 
 /*profile*/
@@ -75,6 +75,8 @@ header li{
 	margin: auto;
 	text-align: center ;
 	background-color: #fff ;
+	height: 10vh ;
+	
 }
 
 #profile img{
