--- a/css/custom.css
+++ b/css/custom.css
@@ -309,18 +309,16 @@ header .content{
 }
 
 @media ( min-width: 800px ) {
-	/*
 	body{
 		display: grid;
 		grid-row-gap: 50px ;
-		grid-template-columns: 250px auto;
 		grid-template-areas:
-		"header header"
-		". content1"
-		". content2"
-		". content3"
-		". content4"
-		". content5"
+		"header"
+		"content1"
+		"content2"
+		"content3"
+		"content4"
+		"content5"
 		;
 	}
 	*/
